--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.17.2",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.7.0"
+    "mongoose": "^4.7.0",
+    "validator": "^6.1.0"
   },
   "devDependencies": {
+    "crypto-js": "^3.1.8",
     "expect": "^1.20.2",
     "mocha": "^3.2.0",
     "supertest": "^2.0.1"
